...

    <EditText
        android:layout_marginTop="20dp"
        android:hint="Plain text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plainText"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Encrypt Data"
        android:id="@+id/buttonEncrypt"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
...


    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Decrypt Data"
        android:id="@+id/buttonDecrypt"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
...
        android:text="Data Matched:"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewDataMatched"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
