...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:text="Secure Storage"/>

    <Button
        android:id="@+id/EncryptDecrypt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/secureStorage"
        android:layout_centerVertical="true"
        android:text="Encrypt and Decrypt"/>

    <Button
        android:id="@+id/createPaaasword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EncryptDecrypt"
        android:layout_centerHorizontal="true"
        android:text="Create Password"
        />

    <TextView
        android:id="@+id/devicecapable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
