...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Call API" />


    <ScrollView
        android:id="@+id/SCROLLER_ID3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
...
