<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SecureStorageActivity">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Secure Storage!"
            android:id="@+id/textView" />



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/secureLayout"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:hint="Key"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/Key_editText"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/textView"
                />




            <LinearLayout
                android:layout_below="@+id/textView"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CreatePassword"
                    android:id="@+id/create_password"
                    android:layout_weight="2"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Retrieve"
                    android:id="@+id/retrieve"
                    android:layout_weight="2"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete"
                    android:id="@+id/delete_button" />


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:id="@+id/output_textView"

                />

        </LinearLayout>


</RelativeLayout>
