<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:padding="2dp"
    tools:context="cdp.philips.com.demoapp.LauncherActivity">

    <LinearLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btn_launch_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="launchAsActivity"
        android:text="@string/launch_activity" />

    <Button
        android:id="@+id/btn_launch_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_launch_activity"
        android:layout_centerHorizontal="true"
        android:onClick="launchAsFragment"
        android:text="@string/launch_fragment" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_launch_fragment"
        android:layout_centerHorizontal="true"
        android:onClick="logout"
        android:text="@string/logout" />

</RelativeLayout>
