...
            android:id="@+id/contactUsTitle"
            style="@style/contactUsHelpText"
            android:text="@string/contact_us_text"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />

        <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
            android:id="@+id/contactUsChat"
            style="@style/fontButton"
            android:text="@string/live_chat"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Bold.otf" />

        <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
            android:id="@+id/contactUsEmail"
...
